# SuperSVDetector

./: Cargo.toml  README.md  read1.fastq  read2.fastq
data/grch37/: sim1.fq  sim2.fq  sim_chr20.bam  sim_chr20.bam.bai
dataToTest/: demo_bins_chr22.txt  demo_reads_chr22.sorted.bam  demo_reads_chr22.sorted.bam.bai  demo_ref_chr22.fa  demo_ref_chr22.fa.amb  demo_ref_chr22.fa.ann  demo_ref_chr22.fa.bwt  demo_ref_chr22.fa.fai  demo_ref_chr22.fa.pac  demo_ref_chr22.fa.sa
datasets/grch37/: chr20_bins.tsv  sim_chr20.bam  sim_chr20.sorted.bam  sim_chr20.sorted.bam.bai  sim_chr20.uncompressed.vcf  sim_del.bam  sim_del.sorted.bam  sim_del.sorted.bam.bai  sim_del.vcf  sim_del_R1.fq  sim_del_R2.fq  sim_reads_1.fq  sim_reads_2.fq
demo_results/: chr22_demo_segment_0_500000.json  chr22_demo_segment_1000000_1500000.json  chr22_demo_segment_1500000_2000000.json  chr22_demo_segment_500000_1000000.json  demo_chr22.vcf
src/: bins.rs  cluster.rs  confirm.rs  hotspot.rs  io_utils.rs  kmer.rs  main.rs  merge_vcf.rs  mpi_wrap.rs  process_bin.rs  suffix.rs  vcfout.rs
