[package]
name = "SuperSVDetector"
version = "0.3.0"
edition = "2021"


[dependencies]
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Bioinformatics
rust-htslib = "0.44" # BAM/CRAM/BCF/VCF I/O
bio = "1" # k-mers, aligners, FM-index, suffix array
hashbrown = "0.14" # fast hash maps for minimizer index
# MPI
mpi = "0.8"


[profile.release]
lto = true
codegen-units = 1
opt-level = 3